<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtPincode">Password
        </string>
    <string name="btnLogin">Start To Write</string>
    <string name="title_activity_list_diary">ListDiaryActivity</string>
    <string name="title_activity_add_diary">AddDiaryActivity</string>
    <string name="title_activity_theme">ThemeActivity</string>
    <string name="title_activity_diary_detail">DiaryDetail</string>
    <string name="btnDiaryDetail">Detail</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="drawer_open">Drawer Açıldı</string>
    <string name="drawer_close">Drawer Kapandı</string>
    <string name="sw_start_stop_music">Music</string>
    <string name="btn_music_player_open">Music Player</string>

    <string-array name="leftMenu">
        <item>New Diary</item>
        <item>All Diaries</item>
        <item>Music</item>
        <item>Horoscopes</item>
        <item>Diary Detail</item>
   
    </string-array>

    <string name="btn_horosope_detail">Read</string>
    <string name="title_activity_horoscop_detail">HoroscopDetailActivity</string>
    <string name="btn_camera_open">Camera</string>
    <string name="btn_gallery_open">Gallery</string>
    <string name="btn_speecth_text">Speak</string>
    <string name="btn_send_email">Send Email</string>
    <string name="btn_record_voice">Voice Record</string>
    <string name="title_activity_acilis">Diary Book</string>
    <string name="btn_exit_detal_horoscope">Exit</string>
    <string name="btn_send_diary_sms">Send Sms</string>
    <string name="btn_forget_password">Forget password</string>
    <string name="chc_remember_me">Remember Me</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>New Diary</item>
        <item>Horoscopes</item>
        <item>Settings</item>
        <item>Log Out</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_add_new_diary</item>
        <item>@drawable/ic_horoscope</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_log_out</item>
    </array>
    <array name="horoscope_icons">
        <item>@drawable/ic_aries</item>
        <item>@drawable/ic_taurus</item>
        <item>@drawable/ic_gemini</item>
        <item>@drawable/ic_cancer</item>
        <item>@drawable/ic_leo</item>
        <item>@drawable/ic_virgo</item>
        <item>@drawable/ic_libra</item>
        <item>@drawable/ic_scorpio</item>
        <item>@drawable/ic_sagittarius</item>
        <item>@drawable/ic_capricorn</item>
        <item>@drawable/ic_aquarius</item>
        <item>@drawable/ic_pisces</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="txt_add_title">Title</string>
    <string name="txt_add_content">What you are thinking</string>
    <string name="btn_diary_list_delete">Delete</string>
    <string name="btn_diary_detail_update">Update</string>
    <string name="btn_current_password">Current Password</string>
    <string name="btn_new_password">New Password</string>
    <string name="btn_new_password_again">New Password Again</string>
    <string name="btn_change_password">Change Password</string>
    <string name="brush">Brush</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="btn_email">Email</string>
    <string name="txt_first_screen1">Are You Ready</string>
    <string name="txt_first_screen_loading">loading...</string>
    <string name="txt_first_screen_write"></string>
    <string name="txt_first_screen_writing">to write everything?</string>

</resources>