<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    android:orientation="vertical"
    tools:context=".MainActivity" >
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_gravity="center"
	    android:orientation="horizontal" >
	    <ImageButton
		    android:id="@+id/draw_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:contentDescription="@string/brush"
		    android:src="@drawable/firca" />

	    <ImageButton
		    android:id="@+id/save_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:contentDescription="@string/save"
		    android:src="@drawable/kaydet" />

	    <Button
	        android:id="@+id/btnExitPaint"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/ic_exit" />

	</LinearLayout>

	 <com.iuce.diaryandroidproject2.DrawingView
	     android:id="@+id/drawingView1"
	     android:layout_width="fill_parent"
	     android:layout_height="0dp"
	     android:layout_marginBottom="3dp"
	     android:layout_marginLeft="5dp"
	     android:layout_marginRight="5dp"
	     android:layout_marginTop="3dp"
	     android:layout_weight="1"
	     android:background="#FFFFFFFF"  />

	 <LinearLayout
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content" >

	     <ImageView
	         android:id="@+id/imgFoto"
	         android:layout_width="wrap_content"
	         android:layout_height="match_parent"
	         android:layout_weight="0.43"
	         android:src="@drawable/abc_ab_share_pack_holo_dark" />

	     <LinearLayout
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:orientation="vertical" >

	         <LinearLayout
	             android:id="@+id/paint_colors"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:orientation="horizontal" >

	             <ImageButton
	                 android:id="@+id/imgBtn1"
	                 android:layout_width="@dimen/large_brush"
	                 android:layout_height="@dimen/large_brush"
	                 android:layout_margin="2dp"
	                 android:background="#FF660000"
	                 android:contentDescription="@string/paint"
	                 android:src="@drawable/paint"
	                 android:tag="#FF660000" />

	             <ImageButton
	                 android:id="@+id/imgBtn2"
	                 android:layout_width="@dimen/large_brush"
	                 android:layout_height="@dimen/large_brush"
	                 android:layout_margin="2dp"
	                 android:background="#FFFF6600"
	                 android:contentDescription="@string/paint"
	                 android:src="@drawable/paint"
	                 android:tag="#FFFF6600" />

	             <ImageButton
	                 android:id="@+id/imgBtn3"
	                 android:layout_width="@dimen/large_brush"
	                 android:layout_height="@dimen/large_brush"
	                 android:layout_margin="2dp"
	                 android:background="#FFFFCC00"
	                 android:contentDescription="@string/paint"
	                 android:src="@drawable/paint"
	                 android:tag="#FFFFCC00" />

	             <ImageButton
	                 android:id="@+id/imgBtn4"
	                 android:layout_width="@dimen/large_brush"
	                 android:layout_height="@dimen/large_brush"
	                 android:layout_margin="2dp"
	                 android:background="#FF009900"
	                 android:contentDescription="@string/paint"
	                 android:src="@drawable/paint"
	                 android:tag="#FF009900" />

	             <RelativeLayout
	                 android:layout_width="match_parent"
	                 android:layout_height="wrap_content" >
	             </RelativeLayout>
	         </LinearLayout>

	         <LinearLayout
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:orientation="horizontal" >

	             <ImageButton
	                 android:id="@+id/imgBtn5"
	                 android:layout_width="@dimen/large_brush"
	                 android:layout_height="@dimen/large_brush"
	                 android:layout_margin="2dp"
	                 android:background="#FF0000FF"
	                 android:contentDescription="@string/paint"
	                 android:src="@drawable/paint"
	                 android:tag="#FF0000FF" />

	             <ImageButton
	                 android:id="@+id/imgBtn6"
	                 android:layout_width="@dimen/large_brush"
	                 android:layout_height="@dimen/large_brush"
	                 android:layout_margin="2dp"
	                 android:background="#FFFFFFFF"
	                 android:contentDescription="@string/paint"
	                 android:src="@drawable/paint"
	                 android:tag="#FFFFFFFF" />

	             <ImageButton
	                 android:id="@+id/imgBtn7"
	                 android:layout_width="@dimen/large_brush"
	                 android:layout_height="@dimen/large_brush"
	                 android:layout_margin="2dp"
	                 android:background="#FF787878"
	                 android:contentDescription="@string/paint"
	                 android:src="@drawable/paint"
	                 android:tag="#FF787878" />

	             <ImageButton
	                 android:id="@+id/imgBtn8"
	                 android:layout_width="@dimen/large_brush"
	                 android:layout_height="@dimen/large_brush"
	                 android:layout_margin="2dp"
	                 android:background="#FF000000"
	                 android:contentDescription="@string/paint"
	                 android:src="@drawable/paint"
	                 android:tag="#FF000000" />

	         </LinearLayout>
	     </LinearLayout>
	 </LinearLayout>

</LinearLayout>